# CodeAlpha_Data-Visualization

./: README.md
data-viz-portfolio/data-viz-portfolio/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
data-viz-portfolio/data-viz-portfolio/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
data-viz-portfolio/data-viz-portfolio/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data-viz-portfolio/data-viz-portfolio/.github/workflows/: ci.yml  release.yml
data-viz-portfolio/data-viz-portfolio/docs/: design_decisions.md
data-viz-portfolio/data-viz-portfolio/notebooks/: portfolio_walkthrough.ipynb
data-viz-portfolio/data-viz-portfolio/src/: build_all.py
data-viz-portfolio/data-viz-portfolio/src/data/: generate_datasets.py
data-viz-portfolio/data-viz-portfolio/src/utils/: style.py
data-viz-portfolio/data-viz-portfolio/src/visualizations/: chart_01_climate.py  chart_02_ecommerce.py  chart_03_segments.py  chart_04_stocks.py  chart_05_survey.py  chart_06_distributions.py
data-viz-portfolio/data-viz-portfolio/tests/: test_charts.py
