[metadata]
name = data-viz-portfolio
version = 1.0.0
author = Jai Krishna
description = Production-quality data visualizations built with Matplotlib & Seaborn
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<your-username>/data-viz-portfolio
python_requires = >=3.10

[options]
packages = find:
package_dir = = src
install_requires =
    matplotlib>=3.8.0
    seaborn>=0.13.0
    pandas>=2.1.0
    numpy>=1.26.0
    scipy>=1.11.0
    flask>=3.0.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=24.0.0
    flake8>=7.0.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,build,dist
ignore = E203, W503

[isort]
profile = black
line_length = 100
src_paths = src, tests

[mypy]
python_version = 3.10
ignore_missing_imports = True
warn_return_any = True
